# src/main/java/com/itplace/adminapi/benefit/controller/BenefitController.java
@@ -2,8 +2,11 @@ package com.itplace.adminapi.benefit.controller;
 
 import com.itplace.adminapi.benefit.BenefitCode;
 import com.itplace.adminapi.benefit.dto.BenefitDetailResponse;
+import com.itplace.adminapi.benefit.dto.BenefitListRequest;
+import com.itplace.adminapi.benefit.dto.BenefitResponse;
 import com.itplace.adminapi.benefit.dto.BenefitUpdateRequest;
 import com.itplace.adminapi.benefit.dto.FavoriteRankResponse;
+import com.itplace.adminapi.benefit.dto.PagedResponse;
 import com.itplace.adminapi.benefit.service.BenefitService;
 import com.itplace.adminapi.common.ApiResponse;
 import java.util.List;
@@ -25,7 +28,7 @@ public class BenefitController {
     private final BenefitService benefitService;
 
     @GetMapping("/favorite")
-    public ResponseEntity<ApiResponse<?>> getBenefitFavorite(@RequestParam(defaultValue = "4") int limit){
+    public ResponseEntity<ApiResponse<?>> getBenefitFavorite(@RequestParam(defaultValue = "5") int limit){
         List<FavoriteRankResponse> favoriteRank = benefitService.favoriteRank(limit);
         ApiResponse<?> body = ApiResponse.of(BenefitCode.BENEFIT_FAVORITE_SUCCESS, favoriteRank);
 
@@ -53,6 +56,14 @@ public class BenefitController {
     public ResponseEntity<ApiResponse<Long>> getBenefitCount() {
         Long count = benefitService.getBenefitCount();
         ApiResponse<Long> body = ApiResponse.of(BenefitCode.BENEFIT_COUNT_SUCCESS, count);
+        return ResponseEntity.status(body.getStatus()).body(body);
+    }
+
+    @GetMapping
+    public ResponseEntity<ApiResponse<?>> getAllBenefits(BenefitListRequest request) {
+        PagedResponse<BenefitResponse> benefitList = benefitService.getBenefitList(request);
+        ApiResponse<?> body = ApiResponse.of(BenefitCode.BENEFIT_LIST_SUCCESS, benefitList);
+
         return ResponseEntity.status(body.getStatus()).body(body);
     }
 }
